Maps baselines to new messages.
When user adds message from specific baseline, automatically map message
to proper baseline. Added navbar.

--- a/app/views/baselines/show.html.erb
+++ b/app/views/baselines/show.html.erb
@@ -8,7 +8,7 @@
   <h3>Messages</h3>
   <%= link_to 'New Message', new_message_path(baseline: @baseline.id) %>
 </p>
-<table>
+<table class="table-striped">
   <thead>
   <tr>
     <th>Msg</th>
