--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -1,16 +1,14 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Name:</strong>
-  <%= @product.name %>
+  <h3> <%= @product.name %> </h3>
 </p>
 
 <p>
-  <strong>Description:</strong>
-  <%= @product.description %>
+  <h3> <%= @product.description %> </h3>
 </p>
 
-<table>
+<table class="table-striped">
   <thead>
   <tr>
     <th>Baselines</th>
