--- a/app/views/baselines/show.html.erb
+++ b/app/views/baselines/show.html.erb
@@ -1,34 +1,49 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <h1><%= @baseline.product.name %> - <%= @baseline.name %></h1>
+  <h1>
+    <%= @baseline.product.name %> - <%= @baseline.name %>
+  <%= link_to edit_baseline_path(@baseline), class: "btn btn-default btn-xs" do %>
+    <span class="glyphicon glyphicon-pencil" aria-hidden="true"></span>
+  <% end %>
+  </h1>
 </p>
+
+<ul class="nav nav-tabs">
+  <li role="presentation" class="active"><a href="#">Messages</a></li>
+  <li role="presentation"><a href="#">Tags</a></li>
+</ul>
 
 <p>
-  <h3>Messages</h3>
-  <%= link_to 'New Message', new_message_path(baseline: @baseline.id) %>
-</p>
-<table class="table-striped">
-  <thead>
-  <tr>
-    <th>Msg</th>
-    <th>Description</th>
-    <th colspan="3"></th>
-  </tr>
-  </thead>
-
-  <tbody>
-  <% @baseline.messages.each do |message| %>
-      <tr>
-        <td><%= message.msg_id %></td>
-        <td><%= message.description %></td>
-        <td><%= link_to 'Show', message %></td>
-        <td><%= link_to 'Edit', edit_message_path(message) %></td>
-        <td><%= link_to 'Destroy', message, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+  <%= link_to new_message_path(baseline: @baseline.id), class: "btn btn-default btn-sm" do %>
+    <span class="glyphicon glyphicon-plus" aria-hidden="true"></span> New Message
   <% end %>
-  </tbody>
-</table>
+</p>
 
-<%= link_to 'Edit', edit_baseline_path(@baseline) %> |
+<div class="panel panel-default">
+  <div class="panel-body">
+    <table class="table table-striped">
+      <thead>
+      <tr>
+        <th>Msg</th>
+        <th>Description</th>
+        <th colspan="3"></th>
+      </tr>
+      </thead>
+
+      <tbody>
+      <% @baseline.messages.each do |message| %>
+          <tr>
+            <td><%= message.msg_id %></td>
+            <td><%= message.description %></td>
+            <td><%= link_to 'Show', message %></td>
+            <td><%= link_to 'Edit', edit_message_path(message) %></td>
+            <td><%= link_to 'Destroy', message, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+          </tr>
+      <% end %>
+      </tbody>
+</table>
+  </div>
+</div>
+
 <%= link_to 'Back', baselines_path %>
