Updating new message form.
Still a work in progess.

--- a/app/views/messages/new.html.erb
+++ b/app/views/messages/new.html.erb
@@ -1,3 +1,5 @@
+<div class="container">
+
 <h1>New Message</h1>
 
 <%= render 'form', message: @message, baseline: @baseline %>
@@ -7,3 +9,5 @@
 <% else %>
     <%= link_to 'Back', messages_path %>
 <% end %>
+
+</div>
