--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,36 +1,120 @@
 <%= form_for(message) do |f| %>
-  <% if message.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(message.errors.count, "error") %> prohibited this message from being saved:</h2>
+    <% if message.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(message.errors.count, "error") %> prohibited this message from being saved:</h2>
 
-      <ul>
-      <% message.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-      </ul>
+          <ul>
+            <% message.errors.full_messages.each do |message| %>
+                <li><%= message %></li>
+            <% end %>
+          </ul>
+        </div>
+    <% end %>
+
+    <div class="container">
+      <div class="row">
+        <div class="col-md-3">
+          <div class="field">
+            <%= f.label :name %>
+            <%= f.text_field :name %>
+          </div>
+
+          <div class="field">
+            <b>Message ID</b> <br>
+            <%= f.text_field :msg_id %>
+          </div>
+
+          <% if @baseline == nil %>
+              <div class="field">
+                <%= f.label :baseline_id %>
+                <%= f.select :baseline_id, Baseline.all.collect {|b| [ b.name, b.id ] } %>
+              </div>
+          <% else %>
+              <%= f.hidden_field :baseline_id, value: @baseline.id %>
+          <% end %>
+        </div>
+
+        <div class="col-md-5">
+          <div class="field">
+            <%= f.label :description %>
+            <%= f.text_area :description %>
+          </div>
+        </div>
+
+      </div>
     </div>
-  <% end %>
 
-  <div class="field">
-    <%= f.label :msg_id %>
-    <%= f.text_field :msg_id %>
-  </div>
+    <div class="container">
+      <div class="row">
 
-  <div class="field">
-    <%= f.label :description %>
-    <%= f.text_area :description %>
-  </div>
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">Producers/Publishers</h3>
+          </div>
+          <div class="panel-body">
+            <div class="col-md-3">
+              <div class="panel panel-default">
+                Available
+              </div>
+            </div>
 
-  <% if @baseline == nil %>
-    <div class="field">
-      <%= f.label :baseline_id %>
-      <%= f.select :baseline_id, Baseline.all.collect {|b| [ b.name, b.id ] } %>
+            <div class="col-md-1">
+              <button type="button" class="btn btn-default btn-sm">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+              </button>
+              <br>
+              <button type="button" class="btn btn-default btn-sm">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+              </button>
+            </div>
+
+            <div class="col-md-3">
+              <div class="panel panel-default">
+                Added
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
     </div>
-  <% else %>
-      <%= f.hidden_field :baseline_id, value: @baseline.id %>
-  <% end %>
 
-  <div class="actions">
-    <%= f.submit %>
-  </div>
+    <div class="container">
+      <div class="row">
+
+        <div class="panel panel-default">
+          <div class="panel-heading">
+            <h3 class="panel-title">Consumers/Subscribers</h3>
+          </div>
+          <div class="panel-body">
+            <div class="col-md-3">
+              <div class="panel panel-default">
+                Available
+              </div>
+            </div>
+
+            <div class="col-md-1">
+              <button type="button" class="btn btn-default btn-sm">
+                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+              </button>
+              <br>
+              <button type="button" class="btn btn-default btn-sm">
+                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+              </button>
+            </div>
+
+            <div class="col-md-3">
+              <div class="panel panel-default">
+                Added
+              </div>
+            </div>
+          </div>
+        </div>
+
+      </div>
+    </div>
+
+    <div class="actions">
+      <%= f.submit %>
+    </div>
 <% end %>
