Nests application routes under baseline
Ensures that a baseline is always provided for application routes on
creating and listing applications.

--- a/app/views/applications/edit.html.erb
+++ b/app/views/applications/edit.html.erb
@@ -3,4 +3,4 @@
 <%= render 'form', application: @application %>
 
 <%= link_to 'Show', @application %> |
-<%= link_to 'Back', applications_path %>
+<%= link_to 'Back', baseline_applications_path(@application.baseline) %>
