--- a/app/views/applications/index.html.erb
+++ b/app/views/applications/index.html.erb
@@ -28,4 +28,4 @@
 
 <br>
 
-<%= link_to 'New Application', new_application_path %>
+<%= link_to 'New Application', new_baseline_application_path(@baseline) %>
