--- a/app/views/applications/show.html.erb
+++ b/app/views/applications/show.html.erb
@@ -16,4 +16,4 @@
 </p>
 
 <%= link_to 'Edit', edit_application_path(@application) %> |
-<%= link_to 'Back', applications_path %>
+<%= link_to 'Back', baseline_applications_path(@application.baseline) %>
