--- a/app/views/applications/new.html.erb
+++ b/app/views/applications/new.html.erb
@@ -2,4 +2,4 @@
 
 <%= render 'form', application: @application %>
 
-<%= link_to 'Back', applications_path %>
+<%= link_to 'Back', baseline_applications_path(@application.baseline) %>
