--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,3 +1,29 @@
+<script type="text/javascript">
+
+    $(document).ready(function() {
+        var baseline_apps = [];
+
+        $.get("/baselines/<%= baseline.id %>/applications.json", function(data) {
+            //console.log("got data: ", data);
+            for (var i = 0; i < data.length; i++) {
+                baseline_apps.push({ id: data[i].id, text: data[i].name });
+            }
+
+            //console.log("select2 data", baseline_apps);
+            $("#producers-select").trigger('change');
+        });
+
+        $("#producers-select").select2().on('change', function() {
+            $("#producers-select").select2({
+                theme: "bootstrap",
+                data: baseline_apps,
+                placeholder: "select an application"
+            });
+        });
+
+    });
+</script>
+
 <%= form_for(message) do |f| %>
     <% if message.errors.any? %>
         <div id="error_explanation">
@@ -51,27 +77,11 @@
           <div class="panel-heading">
             <h3 class="panel-title">Producers/Publishers</h3>
           </div>
+
           <div class="panel-body">
             <div class="col-md-3">
-              <div class="panel panel-default">
-                Available
-              </div>
-            </div>
-
-            <div class="col-md-1">
-              <button type="button" class="btn btn-default btn-sm">
-                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-              </button>
-              <br>
-              <button type="button" class="btn btn-default btn-sm">
-                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-              </button>
-            </div>
-
-            <div class="col-md-3">
-              <div class="panel panel-default">
-                Added
-              </div>
+                <select id="producers-select" class="producers-select">
+                </select>
             </div>
           </div>
         </div>
