--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -13,11 +13,15 @@
             $("#producers-select").trigger('change');
         });
 
-        $("#producers-select").select2().on('change', function() {
-            $("#producers-select").select2({
+        //$("#producers-select").select2().on('change', function() {
+        $("select").select2().on('change', function() {
+            //$("#producers-select").select2({
+            $("select").select2({
                 theme: "bootstrap",
                 data: baseline_apps,
                 placeholder: "select an application"
+                //width: "resolve",
+                //dropdownCssClass: "bigdrop"
             });
         });
 
@@ -73,15 +77,14 @@
     <div class="container">
       <div class="row">
 
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h3 class="panel-title">Producers/Publishers</h3>
-          </div>
+        <div class="col-md-8">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h3 class="panel-title">Producers/Publishers</h3>
+            </div>
 
-          <div class="panel-body">
-            <div class="col-md-3">
-                <select id="producers-select" class="producers-select">
-                </select>
+            <div class="panel-body">
+                  <select id="producers-select" multiple="multiple" class="selectwidthauto"></select>
             </div>
           </div>
         </div>
@@ -92,31 +95,14 @@
     <div class="container">
       <div class="row">
 
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h3 class="panel-title">Consumers/Subscribers</h3>
-          </div>
-          <div class="panel-body">
-            <div class="col-md-3">
-              <div class="panel panel-default">
-                Available
-              </div>
+        <div class="col-md-8">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h3 class="panel-title">Consumers/Subscribers</h3>
             </div>
 
-            <div class="col-md-1">
-              <button type="button" class="btn btn-default btn-sm">
-                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-              </button>
-              <br>
-              <button type="button" class="btn btn-default btn-sm">
-                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-              </button>
-            </div>
-
-            <div class="col-md-3">
-              <div class="panel panel-default">
-                Added
-              </div>
+            <div class="panel-body">
+                  <select id="consumers-select" multiple="multiple" class="selectwidthauto"></select>
             </div>
           </div>
         </div>
