--- a/app/views/messages/edit.html.erb
+++ b/app/views/messages/edit.html.erb
@@ -1,6 +1,6 @@
 <h1>Editing Message</h1>
 
-<%= render 'form', message: @message %>
+<%= render 'form', message: @message, baseline: @baseline %>
 
 <%= link_to 'Show', @message %> |
 <%= link_to 'Back', messages_path %>
