--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,33 +1,3 @@
-<script type="text/javascript">
-
-    $(document).ready(function() {
-        var baseline_apps = [];
-
-        $.get("/baselines/<%= baseline.id %>/applications.json", function(data) {
-            //console.log("got data: ", data);
-            for (var i = 0; i < data.length; i++) {
-                baseline_apps.push({ id: data[i].id, text: data[i].name });
-            }
-
-            //console.log("select2 data", baseline_apps);
-            $("#producers-select").trigger('change');
-        });
-
-        //$("#producers-select").select2().on('change', function() {
-        $("select").select2().on('change', function() {
-            //$("#producers-select").select2({
-            $("select").select2({
-                theme: "bootstrap",
-                data: baseline_apps,
-                placeholder: "select an application"
-                //width: "resolve",
-                //dropdownCssClass: "bigdrop"
-            });
-        });
-
-    });
-</script>
-
 <%= form_for(message) do |f| %>
     <% if message.errors.any? %>
         <div id="error_explanation">
@@ -44,20 +14,20 @@
     <div class="container">
       <div class="row">
         <div class="col-md-3">
-          <div class="field">
+          <div class="form-group">
             <%= f.label :name %>
-            <%= f.text_field :name %>
+            <%= f.text_field :name, class: 'form-control' %>
           </div>
 
-          <div class="field">
-            <b>Message ID</b> <br>
-            <%= f.text_field :msg_id %>
+          <div class="form-group">
+            <%= f.label :msg_id, "Message ID" %>
+            <%= f.text_field :msg_id, class: 'form-control' %>
           </div>
 
           <% if baseline == nil %>
-              <div class="field">
+              <div class="form-group">
                 <%= f.label :baseline_id %>
-                <%= f.select :baseline_id, Baseline.all.collect {|b| [ b.name, b.id ] } %>
+                <%= f.select :baseline_id, Baseline.all.collect {|b| [ b.name, b.id ] }, {}, { class: 'form-control' } %>
               </div>
           <% else %>
               <%= f.hidden_field :baseline_id, value: baseline.id %>
@@ -65,9 +35,9 @@
         </div>
 
         <div class="col-md-5">
-          <div class="field">
+          <div class="form-group">
             <%= f.label :description %>
-            <%= f.text_area :description %>
+            <%= f.text_area :description, class: 'form-control' %>
           </div>
         </div>
 
@@ -87,7 +57,7 @@
               <%= f.select :producer_ids,
                 options_from_collection_for_select(baseline.applications, :id, :name, message.producer_ids),
                 {},
-                { multiple: "multiple", class: "selectwidthauto form-control" } %>
+                { multiple: "multiple", class: "select2-control form-control" } %>
             </div>
           </div>
         </div>
@@ -108,7 +78,7 @@
               <%= f.select :consumer_ids,
                 options_from_collection_for_select(baseline.applications, :id, :name, message.consumer_ids),
                 {},
-                { multiple: "multiple", class: "selectwidthauto form-control" } %>
+                { multiple: "multiple", class: "select2-control form-control" } %>
             </div>
           </div>
         </div>
