--- a/app/views/messages/_form.html.erb
+++ b/app/views/messages/_form.html.erb
@@ -1,3 +1,11 @@
+<script type="text/javascript">
+    $(document).ready(function() {
+       $(".select2-control").select2({
+           theme: 'bootstrap'
+       });
+    });
+</script>
+
 <%= form_for(message) do |f| %>
     <% if message.errors.any? %>
         <div id="error_explanation">
