--- a/app/views/applications/index.html.erb
+++ b/app/views/applications/index.html.erb
@@ -18,9 +18,9 @@
         <td><%= application.name %></td>
         <td><%= application.baseline %></td>
         <td><%= application.description %></td>
-        <td><%= link_to 'Show', application %></td>
-        <td><%= link_to 'Edit', edit_application_path(application) %></td>
-        <td><%= link_to 'Destroy', application, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to 'Show', baseline_applications_path(@baseline, application) %></td>
+        <td><%= link_to 'Edit', edit_baseline_application_path(@baseline, application) %></td>
+        <td><%= link_to 'Destroy', baseline_applications_path(@baseline, application), method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
