--- a/app/views/messages/show.html.erb
+++ b/app/views/messages/show.html.erb
@@ -15,5 +15,20 @@
   <%= @message.baseline.name %>
 </p>
 
+
+<p>
+  <strong>Producers:</strong>
+  <% @message.producers.each do |p| %>
+   <%= p.name %>
+  <% end %>
+</p>
+
+<p>
+  <strong>Consumers:</strong>
+  <% @message.consumers.each do |c| %>
+   <%= c.name %>
+  <% end %>
+</p>
+
 <%= link_to 'Edit', edit_message_path(@message) %> |
 <%= link_to 'Back', messages_path %>
